--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
+    "rc-texty": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
