--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
+    "rc-queue-anim": "^2.0.0",
     "rc-texty": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
